<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:contentDescription="@string/title_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        app:srcCompat="@drawable/mybites"
        tools:ignore="VisualLintBounds" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="373dp"
        android:layout_height="249dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="2dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503"
        app:srcCompat="@drawable/panel" />

    <TextView
        android:id="@+id/nametag"
        android:layout_width="100dp"
        android:layout_height="28dp"
        android:layout_gravity="start"
        android:layout_marginTop="37dp"
        android:fontFamily="@font/opensans_bold"
        android:text="Username"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#483E35"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/login_name"
        android:layout_width="321dp"
        android:layout_height="48dp"
        android:autofillHints="name"
        android:background="@android:drawable/editbox_background"
        android:fontFamily="@font/opensans_light"
        android:hint="@string/hint_name"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.313" />

    <TextView
        android:id="@+id/passwordtag"
        android:layout_width="95dp"
        android:layout_height="27dp"
        android:layout_gravity="start"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="67dp"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#483E35"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_name"
        app:layout_constraintVertical_bias="0.185" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="321dp"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:background="@android:drawable/editbox_background"
        android:fontFamily="@font/opensans_light"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.796" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn1"
        android:fontFamily="@font/opensans_extrabold"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signupRedirect"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/signupRedirect"
        android:layout_width="153dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn2"
        android:fontFamily="@font/opensans_extrabold"
        android:text="@string/signup"
        android:textColor="#483E35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>