<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFDAA7"
    tools:context=".EditProfileActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="373dp"
        android:layout_height="500dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.452"
        app:srcCompat="@drawable/panel" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="321dp"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:background="@android:drawable/editbox_background"
        android:fontFamily="@font/opensans_light"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.555" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="95dp"
        android:layout_height="28dp"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#483E35"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.472" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:background="@color/brown_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/go_back_home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:foregroundGravity="center"
            android:padding="5dp"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:text="Edit Profile"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#483E35"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@id/go_back_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.116"
            app:layout_constraintStart_toEndOf="@+id/go_back_home"
            app:layout_constraintTop_toTopOf="@+id/go_back_home"
            app:layout_constraintVertical_bias="0.388"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#483E35"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.056" />

    <EditText
        android:id="@+id/editName"
        android:inputType="none"
        android:clickable="false"
        android:layout_width="321dp"
        android:layout_height="48dp"
        android:autofillHints="name"
        android:background="@android:drawable/editbox_background"
        android:fontFamily="@font/opensans_light"
        android:hint="@string/hint_name"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.121" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="321dp"
        android:layout_height="48dp"
        android:autofillHints="emailAddress"
        android:background="@android:drawable/editbox_background"
        android:fontFamily="@font/opensans_light"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.336" />

    <TextView
        android:layout_width="54dp"
        android:layout_height="28dp"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#483E35"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.262" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/addresses"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#483E35"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.694" />

    <EditText
        android:id="@+id/editAddress"
        android:layout_width="321dp"
        android:layout_height="48dp"
        android:autofillHints="name"
        android:background="@android:drawable/editbox_background"
        android:fontFamily="@font/opensans_light"
        android:hint="@string/hint_address"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.785" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:background="@drawable/btn1"
        android:textColor="@color/white"
        android:fontFamily="@font/opensans_extrabold"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editAddress"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/editAddress"
        app:layout_constraintTop_toBottomOf="@+id/editAddress"
        app:layout_constraintVertical_bias="0.12" />

</androidx.constraintlayout.widget.ConstraintLayout>